chore: Prepare replacing Messenger with MessageService + Misc improvements