@@ -11,7 +11,16 @@ plugins {
 indra {
     javaVersions {
         target(libs.versions.java.get().toInt())
+        previewFeaturesEnabled(true)
     }
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
 }
 
 repositories {
@@ -41,8 +50,8 @@ dependencies {
     testImplementation(kotlin("stdlib"))
     testImplementation(kotlin("reflect"))
 
-    testImplementation(libs.junit.api)
-    testRuntimeOnly(libs.junit.engine)
+    testImplementation(libs.bundles.test.lib)
+    testRuntimeOnly(libs.bundles.test.run)
 
     testImplementation(libs.testcontainers)
     testImplementation(libs.testcontainers.junit.jupiter)
